--- a/index.html
+++ b/index.html
@@ -111,6 +111,23 @@
                 <a href="#"></a>
             </p>
             <h4>
+                <strong>DeepKOA: A deep-learning model predicts progression in knee osteoarthritis using multimodal magnetic resonance images from the osteoarthritis initiative</strong>
+            </h4>
+            <strong>Jiaping Hu*</strong>, <strong>Chuanyang Zheng*</strong>, Qingling Yu, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Bin Zhang, Qi Dou, and Xiaodong Zhang
+            <br>
+            <i>Quantitative Imaging in Medicine and Surgery (Format Revision), 2023</i>
+            <a href="ISMRM 2022-3102.html">[Paper]</a>
+        </div>
+    </div>
+    <br><br>
+
+    <div class="media">
+        <a class="pull-left" href="#"><img class="media-object" src="assets/images/ISMRM%20Progression.png" width="150px" height="120px"></a>
+        <div class="media-body">
+            <p class="media-heading">
+                <a href="#"></a>
+            </p>
+            <h4>
                 <strong>Predicting Knee Osteoarthritis Progression with a interpretable Deep Learning Approach on Magnetic Resonance Imaging: data from the Osteoarthritis Initiative</strong>
             </h4>
             <strong>Jiaping Hu*</strong>, <strong>Chuanyang Zheng*</strong>, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Qi Dou, and Xiaodong Zhang
