--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h4>
                 <strong>Can infrapatellar fat pad predict the incidence of knee osteoarthritis by using deep learning based on MRI? Data from osteoarthritis initiative</strong>
             </h4>
-            <<strong>Keyan Yu*</strong>, <strong>Chuanyang Zheng*</strong>, Jiaping Hu, Lijie Zhong, Qi Dou, Xiaodong Zhang
+            <strong>Keyan Yu*</strong>, <strong>Chuanyang Zheng*</strong>, Jiaping Hu, Lijie Zhong, Qi Dou, Xiaodong Zhang
             <br>
             <i>ISMRM 2022 (Oral)</i>
             <a href="ISMRM 2022-4621.html">[Paper]</a>
