--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <strong>Jiaping Hu*</strong>, <strong>Chuanyang Zheng*</strong>, Qingling Yu, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Bin Zhang, Qi Dou, and Xiaodong Zhang
             <br>
             <i>Quantitative Imaging in Medicine and Surgery (Format Revision), 2023</i>
-            <a href="ISMRM 2022-3102.html">[Paper]</a>
+            [Paper]
         </div>
     </div>
     <br><br>
