--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
             <strong>Chuanyang Zheng</strong>, Zhengying Liu, Enze Xie, Zhenguo Li, Yu Li
             <br>
             <i>Preprint</i>
-            <a href="https://arxiv.org/abs/2304.09797">[Paper]</a> <a href="https://github.com/chuanyang-Zheng/Progressive-Hint">[Code]</a> <a href="https://paperswithcode.com/sota/arithmetic-reasoning-on-gsm8k">[GSM8K SOTA]</a> <a href="https://paperswithcode.com/sota/math-word-problem-solving-on-svamp">[SVAMP SOTA]</a>
+            <a href="https://arxiv.org/abs/2304.09797">[Paper]
+            </a> <a href="https://github.com/chuanyang-Zheng/Progressive-Hint">[Code]</a>
+            <a href="https://paperswithcode.com/sota/arithmetic-reasoning-on-gsm8k">[GSM8K SOTA]</a>
+            <a href="https://paperswithcode.com/sota/math-word-problem-solving-on-svamp">[SVAMP SOTA]</a>
+            <a href="https://paperswithcode.com/sota/math-word-problem-solving-on-math">[MATH SOTA]</a>
+
         </div>
     </div>
 
