--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </h4>
             <strong>Jiaping Hu*</strong>, <strong>Chuanyang Zheng*</strong>, Qingling Yu, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Bin Zhang, Qi Dou, and Xiaodong Zhang
             <br>
-            <i>Quantitative Imaging in Medicine and Surgery (Format Revision), 2023</i>
+            <i>Quantitative Imaging in Medicine and Surgery, 2023</i>
             [Paper]
         </div>
     </div>
