--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
     <br>
     <h3>News</h3>
         <ul>
+            <li>[2022.05.14] Our work PHP is reported by <a href="https://mp.weixin.qq.com/s/y8u40qIXm3oWZkvgKOV17Q">Synced</a></li>
+        </ul>
+        <ul>
+            <li>[2022.05.11] One Paper is accepted to QIMS, thanks to Jiaping, Lijie and Keyan!</li>
+        </ul>
+        <ul>
             <li>[2022.02.01] Two co-first-author papers are accepted to ISMRM 2022 as Oral presentation.</li>
         </ul>
         <ul>
