--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h5>
                         <a target="_blank" href="###">CV</a> /
 			            <a target="_blank" href="https://github.com/chuanyang-Zheng">GitHub</a> /
-                        <a target="_blank" href="https://scholar.google.com/citations?user=NkyvjEYAAAAJ&hl=en">Google Scholar</a> / ->
+                        <a target="_blank" href="https://scholar.google.com/citations?user=LWwh7K4AAAAJ&hl=en">Google Scholar</a> / ->
 			            Email: cyzhengme@gmail.com  |  cyzheng21@cse.cuhk.edu.hk
 
                     </h5>
